<resources>
    <string name="app_name">FirstApp</string>
    <string name="settings">Settings</string>
    <string name="notes">notes</string>
    <string name="shop_list">Shop List</string>
    <string name="new_item">New item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="new_list">New list name</string>
    <string name="list_name">List name</string>
    <string name="create_list">Create list</string>
    <string name="delete_item">Do you want delete this item ?</string>
    <string name="delete_alert">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="clear_list">Clear list</string>
    <string name="delete_list">Delete list</string>
    <string name="share_list">Share list</string>
    <string name="empty">Empty</string>
    <string name="update_list_item">Update List Item</string>
    <string name="name">Name</string>
    <string name="item_info">Item info</string>
    <string name="share">Share by</string>
    <string name="general">General</string>
    <string name="choose_note_style">Choose note style</string>
    <string name="choose_time_format">Choce time and data format</string>
    <string name="theme_settings">Theme settings</string>
    <string name="choose_theme">Choose  theme</string>
    <string name="note_text_settings">Note text settings</string>
    <string name="choose_text_size">Choose text size</string>
    <string name="title_text_size">Title text size</string>
    <string name="content_text_size">Content text size</string>
    <string name="peach_theme">Peach theme</string>
    <string name="green_theme">Green theme</string>

</resources>