<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general"
        app:singleLineTitle="false">

        <ListPreference
            android:defaultValue="Linear"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:icon="@drawable/ic_style"
            android:key="note_style_key"
            app:useSimpleSummaryProvider="true"
            android:title="@string/choose_note_style" />
        <ListPreference
            android:defaultValue="hh:mm:ss - yyyy/MM/dd"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:icon="@drawable/ic_time"
            android:key="time_format_key"
            app:useSimpleSummaryProvider="true"
            android:title="@string/choose_time_format" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/theme_settings">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/choose_theme_array"
            android:entryValues="@array/choose_theme_values"
            android:key="theme_key"
            android:icon="@drawable/ic_style_2"
            app:useSimpleSummaryProvider="true"
            android:title="@string/choose_theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/note_text_settings">

        <ListPreference
            android:defaultValue="16"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="title_size_key"
            android:icon="@drawable/ic_text"
            app:useSimpleSummaryProvider="true"
            android:title="@string/title_text_size" />
        <ListPreference
            android:defaultValue="14"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="content_size_key"
            android:icon="@drawable/ic_text"
            app:useSimpleSummaryProvider="true"
            android:title="@string/note_text_settings" />
    </PreferenceCategory>
</PreferenceScreen>